  Remove the original functionality of :push, :pop, and :remove_all.
  * API change, GtkSocket: rename response tags :plug-added and
  :plug-removed to :plug_added and :plug_removed, respectively.

4.8.0 (unreleased)
------------------
  * Add support for GtkAspectFrame, GtkLinkButton, and GtkMenu.
  * Add documentation for GtkMenuBar, GtkMenuButton, GtkPaned, and
  GtkSizeGroup.

4.7.0 (2016-06-24)
------------------
  * Add command line option -b for sending pipeglade to background.
  * Add command line option -l for logging duration of pipeglade
  command execution.
  * Add command line option -O for redirecting stderr.
  * Widget names are alphanumeric including underscores and (new)
  hyphens.
  * Reject commands with excess arguments.
  * Support temporary blocking of feedback messages.
  * GtkDialog and GtkFileChooserDialog now respond to the commands
  that work for GtkWindow.
  * Toplevel windows report 'name:closed' when closed by the window
  manager.
  * GtkStatusbar commands take non-whitespace strings as context id,
  not just integers.
  * Add missing GtkStatusbar command remove_all_id.
  * Support saving snapshots of widgets into image files (eps, ps,
  pdf, svg).
  * Support coordinate transformation in GtkDrawingArea.
  * New ability for GtkDrawingArea commands to insert themselves at
  arbitrary positions in the current list of drawing operations, not
  just at the end.
  * Remove GtkDrawingArea command refresh; refreshing happens
  automatically.
  * Add GtkDrawingArea command set_font_face.
  * Add GtkDrawingArea command rel_move_for supporting text placement
  with respect to center, upper left corner, etc., of the text.
  * Add GtkScale and GtkSpinButton commands set_range, set_increments,
  and (GtkScale only) set_fill_level.
  * Command execution time improved by a factor of about 20.
  * Avoid silly precision on mouse coordinates emitted from GtkEventBox.
  * Floating point format in commands and messages is now independent